# yolo-ros2-inference

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: development.yaml  jetson_optimized.yaml
docs/: training.md
include/yolo_inference_cpp/: gatenet_postprocessing.hpp  inference_backend.hpp  memory_pool.hpp  onnx_backend.hpp  preprocessing.hpp  profiler.hpp  tensorrt_backend.hpp  yolo_interface.hpp
launch/: gatenet.launch.py  yolo_pose.launch.py  yolo_pose.launch.py   yolo_tensorrt.launch.py
msg/: BoundingBox.msg  Keypoint.msg  KeypointDetection.msg  KeypointDetectionArray.msg  PerformanceInfo.msg
scripts/: build_package.sh  install_dependencies.sh  yolo_batch_exporter_validator.py  yolo_benchmarking.py  yolo_distillation.py  yolo_training.py
src/: gatenet_postprocessing.cpp  inference_backend.cpp  memory_pool.cpp  onnx_backend.cpp  preprocessing.cpp  profiler.cpp  tensorrt_backend.cpp  yolo_inference.cpp  yolo_inference_node.cpp
